feat: add explanation of encodings

--- a/towards_catboost.ipynb
+++ b/towards_catboost.ipynb
@@ -20,19 +20,58 @@
    "id": "30b59401",
    "metadata": {},
    "source": [
-    "### Package Imports"
+    "#### Package Imports"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "45dcffc3",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import category_encoders as ce\n",
     "import pandas as pd\n",
-    "import catboost as cb \n",
-    "import sklearn as skl"
+    "from sklearn.tree import DecisionTreeClassifier, plot_tree\n",
+    "from sklearn.pipeline import Pipeline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "941fde2a",
+   "metadata": {},
+   "source": [
+    "## Background Knowledge"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af0557f3",
+   "metadata": {},
+   "source": [
+    "### Target Encoders\n",
+    "\n",
+    "Encoding methodologies aim to transform non-numerical categorical feature values into numerical values. There are multiple approaches and each comes with its own advantages and caveats. For instance, to mention a few of them:\n",
+    "\n",
+    "- **Label Encoding**: it simply assigns a unique integer to each category in the data.\n",
+    "    *Pros:*\n",
+    "    1. Simple\n",
+    "\n",
+    "    *Cons:*\n",
+    "    1. May introduce ordinal relationships\n",
+    "    2. Features with unknown amounts of categories which have high amounts of low-frecquency categories may be clustered into a marginal category, loosing predictive power based on them.\n",
+    "\n",
+    "- **One-Hot Encoding**: for each category seen for a feature, it creates a new dummy feature which simply indicates with 0 or 1 when the category appears.\n",
+    "    *Pros:*\n",
+    "    1. Simple\n",
+    "    2. Does not assume order between categories\n",
+    "\n",
+    "    *Cons:*\n",
+    "    1. Dimensionality may increase considerably making the use of a dimensionality reduction technique necessary and potentially exploding your system's memmory (tip: if you still want to use it check sparse matrices).\n",
+    "    2. Computationally expensive.\n",
+    "    3. Features with unknown amounts of categories which have high amounts of low-frecquency categories may be clustered into a marginal category, loosing predictive power based on them.\n",
+    "\n",
+    "- **Binary Encoding, Hashing Encodings, ... Let's not get carried out into an endless enumeration.**"
    ]
   }
  ],
