feat: add simple target encoder formula

--- a/towards_catboost.ipynb
+++ b/towards_catboost.ipynb
@@ -12,7 +12,9 @@
     "\n",
     "In this article, I will guide you through the caveats that appear when a pipeline combines certain members of the family of target encoders with tree-based models and extremely low or high entropy features. I'll clue you in: data leakeages and overfitting issues will break your pipeline's performance. \n",
     "\n",
-    "The good news is that these problems that we will see are easy to solve - just use CatBoost and let it handle the encoding methodology for you. As I will be arguing the encoder that it uses by default for categorical features magnificently handles categorical fetures with both extremely low and high entropies and is still in the realm of target encoding.\n"
+    "The good news is that these problems that we will see are easy to solve - just use CatBoost and let it handle the encoding methodology for you. As I will be arguing the encoder that it uses by default for categorical features magnificently handles categorical fetures with both extremely low and high entropies and is still in the realm of target encoding.\n",
+    "\n",
+    "**Important: to simplify the discussion we will frame the discussion under a binary classification task.**\n"
    ]
   },
   {
@@ -49,7 +51,7 @@
    "id": "af0557f3",
    "metadata": {},
    "source": [
-    "### Target Encoders\n",
+    "### Encoders\n",
     "\n",
     "Encoding methodologies aim to transform non-numerical categorical feature values into numerical values. There are multiple approaches and each comes with its own advantages and caveats. For instance, to mention a few of them:\n",
     "\n",
@@ -71,7 +73,20 @@
     "    2. Computationally expensive.\n",
     "    3. Features with unknown amounts of categories which have high amounts of low-frecquency categories may be clustered into a marginal category, loosing predictive power based on them.\n",
     "\n",
-    "- **Binary Encoding, Hashing Encodings, ... Let's not get carried out into an endless enumeration.**"
+    "- **Binary Encoding, Hashing Encodings and more. Let's not get carried out into an endless enumeration.**\n",
+    "\n",
+    "Importantly, encoding methodologies and classifier interact in different ways and consequently the resulting pipelines may inherit or develop different properties and caveats. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6eadb1f5",
+   "metadata": {},
+   "source": [
+    "### Target Encoders\n",
+    "\n",
+    "In its most basic form, a target encoder substitutes each category $c$ of a feature with the training set statistic \n",
+    "$$\\frac{N_{positive\\_samples\\_with\\_category\\_c\\_for\\_the\\_feature}}{N_{\\text{all\\_samples\\_with\\_category\\_c\\_for\\_the\\_feature}}}$$"
    ]
   }
  ],
