feat: add initial target encoding expl & example

--- a/towards_catboost.ipynb
+++ b/towards_catboost.ipynb
@@ -5,7 +5,7 @@
    "id": "fe0e0f9f",
    "metadata": {},
    "source": [
-    "# Doomed to failure: A history about target encoding and Tree-Based Algorithms\n",
+    "# Doomed to failure: A story about target encoding and Tree-Based Algorithms\n",
     "---\n",
     "\n",
     "Have you ever worked with target encoders? Did you ever use any tree-based model? If you have worked with either there will likely be a time in which you are tempted to use both in the same pipeline for classifying data points with categorical features. DON'T! At least until you have read this article detailing one dangerous caveat that this combination has.\n",
@@ -86,7 +86,221 @@
     "### Target Encoders\n",
     "\n",
     "In its most basic form, a target encoder substitutes each category $c$ of a feature with the training set statistic \n",
-    "$$\\frac{N_{positive\\_samples\\_with\\_category\\_c\\_for\\_the\\_feature}}{N_{\\text{all\\_samples\\_with\\_category\\_c\\_for\\_the\\_feature}}}$$"
+    "$$\\frac{N_{positive\\_samples\\_with\\_category\\_c\\_for\\_the\\_feature}}{N_{all\\_samples\\_with\\_category\\_c\\_for\\_the\\_feature}}$$\n",
+    "\n",
+    "Let us see this basic encoder in action with a basic custom implementation. Firstly, we create a trivial dataset:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01c98a6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>feature_1</th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>B</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>A</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>C</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>B</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>A</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  feature_1  target\n",
+       "0         A       0\n",
+       "1         B       1\n",
+       "2         A       1\n",
+       "3         C       1\n",
+       "4         B       0\n",
+       "5         A       0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset_1 = pd.DataFrame(\n",
+    "    {\n",
+    "        \"feature_1\": [\"A\", \"B\", \"A\", \"C\", \"B\", \"A\"],\n",
+    "        \"target\": [0, 1, 1, 1, 0, 0],\n",
+    "    }\n",
+    ")\n",
+    "dataset_1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7859734c",
+   "metadata": {},
+   "source": [
+    "Then, we implement the encoding of the categories according to the most basic target encoder:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "2f345934",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>feature_1</th>\n",
+       "      <th>target</th>\n",
+       "      <th>feature_1_encoded</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>B</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>A</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>C</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>B</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>A</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.333333</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  feature_1  target  feature_1_encoded\n",
+       "0         A       0           0.333333\n",
+       "1         B       1           0.500000\n",
+       "2         A       1           0.333333\n",
+       "3         C       1           1.000000\n",
+       "4         B       0           0.500000\n",
+       "5         A       0           0.333333"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "categories = dataset_1.feature_1.unique()\n",
+    "stats_map = {\n",
+    "    category: dataset_1[dataset_1.feature_1 == category].target.mean() for category in categories\n",
+    "}\n",
+    "dataset_1[\"feature_1_encoded\"] = dataset_1.feature_1.map(stats_map)\n",
+    "dataset_1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dbaf10a1",
+   "metadata": {},
+   "source": [
+    "The resulting encoded feature is the only one used by ML algorithms. The idea is that we can actually encode features by their tendency to be associated with the positive class. This way an algorithm learns on top of the tendencies seen for all features, \"weights\" them and is able to generalize on nobel data points\n",
+    "\n",
+    "Nevertheless, note that the encoded value for C has quite a strong meaning taking into account that we have only one instance of it (I know: the other categories are nearly as scarce from the statistical perspective). In other words, C could actually be a lucky sample and in reality C could actually be more associated with zero labels. Good catch! Actually, this first encoder comes with its own caveat: it is easy to overfit based on scarce categories. \n",
+    "\n",
+    "Therefore, many versions arised to distill this knowledge about category frecquency into the encodings. The most common approach is to simply perform a smoothing between the prior prevalence computed over the training set and the target statistic. For instance, the target encoding from the category-encoders library uses the smoothing:\n",
+    "$$enc(category) = p * stat + (1 - p) * prevalence$$\n",
+    "where:\n",
+    "$$p = \\frac{1}{1 + \\exp\\big(\\frac{(-n\\_{value} - k)}{f}\\big)}$$\n",
+    "and $k$ and $f$ are respectively called the minimum samples per leaf and smoothing parameters. To get further information checkout their [documentation](https://contrib.scikit-learn.org/category_encoders/targetencoder.html)."
    ]
   }
  ],
