--- a/towards_catboost.ipynb
+++ b/towards_catboost.ipynb
@@ -10,7 +10,9 @@
     "\n",
     "Have you ever worked with target encoders? Did you ever use any tree-based model? If you have worked with either there will likely be a time in which you are tempted to use both in the same pipeline for classifying data points with categorical features. DON'T! At least until you have read this article detailing one dangerous caveat that this combination has.\n",
     "\n",
-    "In this article, I will guide you through the caveats that appear when a pipeline combines certain members of the family of target encoders with tree-based models and extremely low or high entropy features. I'll clue you in: data leakeages and overfitting issues will break your pipeline's performance. \n",
+    "In this article, I will guide you through the caveats that appear when a pipeline combines certain members of the family of target encoders with tree-based models and extremely low or high entropy features. I'll clue you in: data leakeages and overfitting issues will break your pipeline's performance.\n",
+    "\n",
+    "The discussion will be centered around the most basic target encoder and the Leave-One-Out encoder and their interaction with tree-based models under certain conditions. Ultimately, it will lead towards a justification to use CatBoost under these same conditions.\n",
     "\n",
     "The good news is that these problems that we will see are easy to solve - just use CatBoost and let it handle the encoding methodology for you. As I will be arguing the encoder that it uses by default for categorical features magnificently handles categorical fetures with both extremely low and high entropies and is still in the realm of target encoding.\n",
     "\n",
@@ -86,7 +88,7 @@
     "### Target Encoders\n",
     "\n",
     "In its most basic form, a target encoder substitutes each category $c$ of a feature with the training set statistic \n",
-    "$$\\frac{N_{positive\\_samples\\_with\\_category\\_c\\_for\\_the\\_feature}}{N_{all\\_samples\\_with\\_category\\_c\\_for\\_the\\_feature}}$$\n",
+    "$$stat = \\frac{N_{positive\\_samples\\_with\\_category\\_c\\_for\\_the\\_feature}}{N_{all\\_samples\\_with\\_category\\_c\\_for\\_the\\_feature}}$$\n",
     "\n",
     "Let us see this basic encoder in action with a basic custom implementation. Firstly, we create a trivial dataset:"
    ]
@@ -298,9 +300,21 @@
     "\n",
     "Therefore, many versions arised to distill this knowledge about category frecquency into the encodings. The most common approach is to simply perform a smoothing between the prior prevalence computed over the training set and the target statistic. For instance, the target encoding from the category-encoders library uses the smoothing:\n",
     "$$enc(category) = p * stat + (1 - p) * prevalence$$\n",
-    "where:\n",
+    "where the prevalence is defined by:\n",
+    "$$prevalence = \\frac{N_{positives}}{N}$$\n",
+    "and the weighting constant is obtained by:\n",
     "$$p = \\frac{1}{1 + \\exp\\big(\\frac{(-n\\_{value} - k)}{f}\\big)}$$\n",
-    "and $k$ and $f$ are respectively called the minimum samples per leaf and smoothing parameters. To get further information checkout their [documentation](https://contrib.scikit-learn.org/category_encoders/targetencoder.html)."
+    "In the last equation, $k$ and $f$ are respectively called the minimum samples per leaf and smoothing parameters. To get further information checkout their [documentation](https://contrib.scikit-learn.org/category_encoders/targetencoder.html)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08220f06",
+   "metadata": {},
+   "source": [
+    "#### Leave-One-Out Encoder\n",
+    "\n",
+    "As previously mentioned, there are multiple types of target encoders and sometimes different resources name them differently. However, the last encoder in the previous section is usually the one receiving the name of target encoder. An encoder in this big family that is commonly used is the so-called Leave-One-Out Encoder. The methodology that it uses aims to signal outlier category-to-label instances and reduce their impact in the general target statistic computation. It is frequently used by data scientists. As we will see it comes with several caveats. However, let us see how it works first!"
    ]
   }
  ],
