--- a/towards_catboost.ipynb
+++ b/towards_catboost.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "01c98a6c",
    "metadata": {},
    "outputs": [
@@ -132,17 +132,17 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>B</td>\n",
+       "      <td>A</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>A</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>C</td>\n",
+       "      <td>B</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -152,8 +152,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>A</td>\n",
-       "      <td>0</td>\n",
+       "      <td>C</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -162,14 +162,14 @@
       "text/plain": [
        "  feature_1  target\n",
        "0         A       0\n",
-       "1         B       1\n",
-       "2         A       1\n",
-       "3         C       1\n",
+       "1         A       1\n",
+       "2         A       0\n",
+       "3         B       1\n",
        "4         B       0\n",
-       "5         A       0"
+       "5         C       1"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,8 +177,8 @@
    "source": [
     "dataset_1 = pd.DataFrame(\n",
     "    {\n",
-    "        \"feature_1\": [\"A\", \"B\", \"A\", \"C\", \"B\", \"A\"],\n",
-    "        \"target\": [0, 1, 1, 1, 0, 0],\n",
+    "        \"feature_1\": [\"A\", \"A\", \"A\", \"B\", \"B\", \"C\"],\n",
+    "        \"target\": [0, 1, 0, 1, 0, 1],\n",
     "    }\n",
     ")\n",
     "dataset_1"
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "id": "2f345934",
    "metadata": {},
    "outputs": [
@@ -233,21 +233,21 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>B</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.500000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
        "      <td>A</td>\n",
        "      <td>1</td>\n",
        "      <td>0.333333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>A</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>C</td>\n",
+       "      <td>B</td>\n",
        "      <td>1</td>\n",
-       "      <td>1.000000</td>\n",
+       "      <td>0.500000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -257,9 +257,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>A</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.333333</td>\n",
+       "      <td>C</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -268,14 +268,14 @@
       "text/plain": [
        "  feature_1  target  feature_1_encoded\n",
        "0         A       0           0.333333\n",
-       "1         B       1           0.500000\n",
-       "2         A       1           0.333333\n",
-       "3         C       1           1.000000\n",
+       "1         A       1           0.333333\n",
+       "2         A       0           0.333333\n",
+       "3         B       1           0.500000\n",
        "4         B       0           0.500000\n",
-       "5         A       0           0.333333"
+       "5         C       1           1.000000"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +314,371 @@
    "source": [
     "#### Leave-One-Out Encoder\n",
     "\n",
-    "As previously mentioned, there are multiple types of target encoders and sometimes different resources name them differently. However, the last encoder in the previous section is usually the one receiving the name of target encoder. An encoder in this big family that is commonly used is the so-called Leave-One-Out Encoder. The methodology that it uses aims to signal outlier category-to-label instances and reduce their impact in the general target statistic computation. It is frequently used by data scientists. As we will see it comes with several caveats. However, let us see how it works first!"
+    "As previously mentioned, there are multiple types of target encoders and sometimes different resources name them differently. However, the last encoder in the previous section is usually the one receiving the name of target encoder. An encoder in this big family that is commonly used is the so-called Leave-One-Out Encoder. The methodology that it uses aims to signal outlier category-to-label instances and reduce their impact in the general target statistic computation. It is frequently used by data scientists. As we will see it comes with several caveats. However, let us see how it works first!\n",
+    "\n",
+    "The Leave-One-Out encoder is actually a vanila target encoder. However, it has a slight modification: it works differently when fitting and transforming the encoder to the training data in comparison when it transforms data from the validation or test sets and new inference data. That is:\n",
+    "\n",
+    "- When fitting and transforming training data: to compute the encoding of a category c for sample i, we compute the target statistic without accounting for the ith sample\n",
+    "- When transforming data once the encoder has been fitted, the encoder works as the most basic vanila target encoder.\n",
+    "\n",
+    "The goal of this approach is to ensure that the classifier can learn about categories during training without the encodings being too influenced by outliers. Up next, we show how it works for our dummy dataset while simultaneously comparing it with the target encoder."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "81a597bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_encoder = ce.TargetEncoder()\n",
+    "loo_encoder = ce.LeaveOneOutEncoder()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15d6bd33",
+   "metadata": {},
+   "source": [
+    "If we look at the resulting transformation performed by the Leave-One-Out encoder on the training set (done with the **fit_transform** method) we see the following:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "d6f08e74",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>feature_1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   feature_1\n",
+       "0        0.5\n",
+       "1        0.0\n",
+       "2        0.5\n",
+       "3        0.0\n",
+       "4        1.0\n",
+       "5        0.5"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loo_encoder.fit_transform(dataset_1[[\"feature_1\"]], dataset_1[\"target\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96d67149",
+   "metadata": {},
+   "source": [
+    "whereas transformation that it does for any dataset that are passed once it is fitted (only calling the **transform** method) are different since the leaving-one-out methodology is no longer applied:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "cb0f9263",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>feature_1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.500000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   feature_1\n",
+       "0   0.333333\n",
+       "1   0.333333\n",
+       "2   0.333333\n",
+       "3   0.500000\n",
+       "4   0.500000\n",
+       "5   0.500000"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loo_encoder.transform(dataset_1[[\"feature_1\"]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ecb12c60",
+   "metadata": {},
+   "source": [
+    "Note the following three things:\n",
+    "\n",
+    "1. Category C only appears once, and consequently we do not want its encoding to be highly influential during training. The leaving-one-out methodology achieves this by simply substituting C with the prevalence of the training data since by leaving it out, we do not have any sample to compute the target statistic and consequenly default to the prevalence: 0.5.\n",
+    "\n",
+    "2. The outlier sample in terms of the category-to-target relationship for category A was encoded differently during training i.e. it was replaced by 0 instead of 0.5.\n",
+    "\n",
+    "3. Indeed the encoder transforms categories differently once it has been fitted (actually, if you think about it: it is impossible to run the leaving-one-out methodology on inference data since you do not the label).\n",
+    "\n",
+    "You may also notice another fact: feature_1 kind of sucks in order to predict target labels from it. It's okay, we only want to use this dummy dataset to show the inner workings of these encoders.\n",
+    "\n",
+    "To demonstrate the third point, we can see that the target encoder indeed always performs the same encoding:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "b0c8d0c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>feature_1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.474256</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.474256</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.474256</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.565054</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   feature_1\n",
+       "0   0.474256\n",
+       "1   0.474256\n",
+       "2   0.474256\n",
+       "3   0.500000\n",
+       "4   0.500000\n",
+       "5   0.565054"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "target_encoder.fit_transform(dataset_1[[\"feature_1\"]], dataset_1[\"target\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "3f48d7ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>feature_1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.474256</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.474256</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.474256</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.565054</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   feature_1\n",
+       "0   0.474256\n",
+       "1   0.474256\n",
+       "2   0.474256\n",
+       "3   0.500000\n",
+       "4   0.500000\n",
+       "5   0.565054"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "target_encoder.transform(dataset_1[[\"feature_1\"]])"
    ]
   }
  ],
