feat: add section on failure scenarios

--- a/towards_catboost.ipynb
+++ b/towards_catboost.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "In this article, I will guide you through the caveats that appear when a pipeline combines certain members of the family of target encoders with tree-based models and extremely low or high entropy features. I'll clue you in: data leakeages and overfitting issues will break your pipeline's performance.\n",
     "\n",
-    "The discussion will be centered around the most basic target encoder and the Leave-One-Out encoder and their interaction with tree-based models under certain conditions. Ultimately, it will lead towards a justification to use CatBoost under these same conditions.\n",
+    "The discussion will be centered around the most basic target encoder and the leave-one-out encoder and their interaction with tree-based models under certain conditions. Ultimately, it will lead towards a justification to use CatBoost under these same conditions.\n",
     "\n",
     "The good news is that these problems that we will see are easy to solve - just use CatBoost and let it handle the encoding methodology for you. As I will be arguing the encoder that it uses by default for categorical features magnificently handles categorical fetures with both extremely low and high entropies and is still in the realm of target encoding.\n",
     "\n",
@@ -312,11 +312,11 @@
    "id": "08220f06",
    "metadata": {},
    "source": [
-    "#### Leave-One-Out Encoder\n",
+    "#### Leave-one-out Encoder\n",
     "\n",
-    "As previously mentioned, there are multiple types of target encoders and sometimes different resources name them differently. However, the last encoder in the previous section is usually the one receiving the name of target encoder. An encoder in this big family that is commonly used is the so-called Leave-One-Out Encoder. The methodology that it uses aims to signal outlier category-to-label instances and reduce their impact in the general target statistic computation. It is frequently used by data scientists. As we will see it comes with several caveats. However, let us see how it works first!\n",
+    "As previously mentioned, there are multiple types of target encoders and sometimes different resources name them differently. However, the last encoder in the previous section is usually the one receiving the name of target encoder. An encoder in this big family that is commonly used is the so-called leave-one-out Encoder. The methodology that it uses aims to signal outlier category-to-label instances and reduce their impact in the general target statistic computation. It is frequently used by data scientists. As we will see it comes with several caveats. However, let us see how it works first!\n",
     "\n",
-    "The Leave-One-Out encoder is actually a vanila target encoder. However, it has a slight modification: it works differently when fitting and transforming the encoder to the training data in comparison when it transforms data from the validation or test sets and new inference data. That is:\n",
+    "The leave-one-out encoder is actually a vanila target encoder. However, it has a slight modification: it works differently when fitting and transforming the encoder to the training data in comparison when it transforms data from the validation or test sets and new inference data. That is:\n",
     "\n",
     "- When fitting and transforming training data: to compute the encoding of a category c for sample i, we compute the target statistic without accounting for the ith sample\n",
     "- When transforming data once the encoder has been fitted, the encoder works as the most basic vanila target encoder.\n",
@@ -340,7 +340,7 @@
    "id": "15d6bd33",
    "metadata": {},
    "source": [
-    "If we look at the resulting transformation performed by the Leave-One-Out encoder on the training set (done with the **fit_transform** method) we see the following:"
+    "If we look at the resulting transformation performed by the leave-one-out encoder on the training set (done with the **fit_transform** method) we see the following:"
    ]
   },
   {
@@ -679,6 +679,24 @@
    ],
    "source": [
     "target_encoder.transform(dataset_1[[\"feature_1\"]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac743925",
+   "metadata": {},
+   "source": [
+    "## Mixing Tree-based Models and Target Encoders: Failure Scenarios\n",
+    "\n",
+    "> *A smooth sea never made a skilled sailor*\n",
+    "\n",
+    "At this point you have read through the definitions of the vanila target encoder and the leave-one-out encoder, and might be tempted to start using it with powerfull tree-based classifiers like Random Forests. ⚠️WATCH OUT!⚠️ As you will see in the following set of scenarios, under certain conditions this combination can be fatal and lead to the massive overfitting of the training dataset.\n",
+    "\n",
+    "These are basically two scenarios: \n",
+    "\n",
+    "- Scenario 1: Leave-one-out Encoder + feature with a set of unique categories that has low cardinality + Decision Tree -> Data Leak\n",
+    "\n",
+    "- Scenario 2: Tranget Encoder + feature with a large set of unique categories that have low frequency + Decision Tree -> Data Leak \n"
    ]
   }
  ],
