feat: finish scenario 2

--- a/towards_catboost.ipynb
+++ b/towards_catboost.ipynb
@@ -977,7 +977,7 @@
    "id": "6b1db0bc",
    "metadata": {},
    "source": [
-    "which shows a perfect fit on the training set even though we know that since the feature and the target are independent this tree would then yield poor results for newly sampled data points.\n",
+    "which shows a perfect fit on the training set even though we know that since the feature and the target are independent this tree would then yield poor results for newly sampled data points. Note that this is a perfect fit since the gini impurity of all leaf nodes is 0.\n",
     "\n",
     "Why not just drop the feature and use others in the data set? I mean: Shouldn't this feature be dropped on the EDA part of the project? Well the answer is that this example is exagerating the presence of the category and consequently its impact. Nevertheless, this impact still happens for milder instances of this same scenario. For instance, if we have that a feature has for 80% of the training data the same categorical value which is uninformative about the target variable, then this phenomenon will happen but only affect this 80% of the dataset. However, if it turns out that for the rest of the dataset the same happens for another feature, then we are doomed to failure as well.\n",
     "\n",
@@ -993,8 +993,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "148e2362",
+   "metadata": {},
+   "source": [
+    "The dataset that we will use to showcase this failure scenario contains a feature *name* that has a large set (with respect to the total size of the training dataset) of unique categories with low frequency. As a matter of fact, this feature does not give any information about the true target value of samples since it has a role similar to that of an indexer. Hence, we should not be able to predict based on it. Additionally, we have created a truly meaningfull feature *is_known_worldwide* which would allows us to learn a model capable of generalizing.\n",
+    "\n",
+    "Let us have a look at this dataset (as you can see when I was working on this topic the presidential elections in the USA were running):"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 41,
    "id": "6a1e12b6",
    "metadata": {},
    "outputs": [
@@ -1028,43 +1038,43 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Trump</td>\n",
-       "      <td>1</td>\n",
+       "      <td>True</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Obama</td>\n",
-       "      <td>1</td>\n",
+       "      <td>True</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Biden</td>\n",
-       "      <td>1</td>\n",
+       "      <td>True</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Sanders</td>\n",
-       "      <td>0</td>\n",
+       "      <td>False</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Kamala</td>\n",
-       "      <td>0</td>\n",
+       "      <td>False</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Musk</td>\n",
-       "      <td>1</td>\n",
+       "      <td>True</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>Guillermo del Toro</td>\n",
-       "      <td>0</td>\n",
+       "      <td>False</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1073,16 +1083,16 @@
       ],
       "text/plain": [
        "                 name  is_known_worldwide  target\n",
-       "0               Trump                   1       1\n",
-       "1               Obama                   1       1\n",
-       "2               Biden                   1       1\n",
-       "3             Sanders                   0       0\n",
-       "4              Kamala                   0       0\n",
-       "5                Musk                   1       0\n",
-       "6  Guillermo del Toro                   0       0"
+       "0               Trump                True       1\n",
+       "1               Obama                True       1\n",
+       "2               Biden                True       1\n",
+       "3             Sanders               False       0\n",
+       "4              Kamala               False       0\n",
+       "5                Musk                True       0\n",
+       "6  Guillermo del Toro               False       0"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1091,7 +1101,7 @@
     "dataset_3 = pd.DataFrame(\n",
     "    {\n",
     "        \"name\": [\"Trump\", \"Obama\", \"Biden\", \"Sanders\", \"Kamala\", \"Musk\", \"Guillermo del Toro\"],\n",
-    "        \"is_known_worldwide\": [1, 1, 1, 0, 0, 1, 0],\n",
+    "        \"is_known_worldwide\": [True, True, True, False, False, True, False],\n",
     "        \"target\": [1, 1, 1, 0, 0, 0, 0],\n",
     "    },\n",
     ")\n",
@@ -1099,8 +1109,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "835e1e8b",
+   "metadata": {},
+   "source": [
+    "The aforementioned feature, *name*, does indeed have a similar role as the one of an idex for our training data i.e. each sample has a unique value for it. As a matter of fact it is this property the one that allows a pipeline based on a Target Encoder and a tree-base model as simple as a Decision Tree to overfit the training data due to a data leak from the target variable.\n",
+    "\n",
+    "The reason for this leak is that when computing the encodings of the categories for *name*, we have that even with the smoothing we get only two values:\n",
+    "\n",
+    "- For samples with target value equal to 1, we get:\n",
+    "\n",
+    "$$p*prevalence + (1-p)*1$$\n",
+    "\n",
+    "- For samples with target value equal to 0, we get:\n",
+    "\n",
+    "$$p*prevalence$$\n",
+    "\n",
+    "Therefore, we get an encoding which contains the information about the target values for each sample. In our case, the target encoding yields:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 45,
    "id": "ef8fc888",
    "metadata": {},
    "outputs": [
@@ -1133,37 +1163,37 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0.502919</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0.482566</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0.502919</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0.482566</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>0.502919</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0.482566</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>0.372811</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.362372</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>0.372811</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.362372</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>0.372811</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0.482566</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>0.372811</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.362372</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1171,26 +1201,34 @@
       ],
       "text/plain": [
        "       name  is_known_worldwide\n",
-       "0  0.502919                   1\n",
-       "1  0.502919                   1\n",
-       "2  0.502919                   1\n",
-       "3  0.372811                   0\n",
-       "4  0.372811                   0\n",
-       "5  0.372811                   1\n",
-       "6  0.372811                   0"
+       "0  0.502919            0.482566\n",
+       "1  0.502919            0.482566\n",
+       "2  0.502919            0.482566\n",
+       "3  0.372811            0.362372\n",
+       "4  0.372811            0.362372\n",
+       "5  0.372811            0.482566\n",
+       "6  0.372811            0.362372"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "target_encoder = ce.TargetEncoder()\n",
+    "target_encoder = ce.TargetEncoder(cols=[\"name\", \"is_known_worldwide\"])\n",
     "encoded_data_3 = target_encoder.fit_transform(\n",
     "    dataset_3[[\"name\", \"is_known_worldwide\"]], dataset_3[\"target\"]\n",
     ")\n",
     "encoded_data_3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "216b8e41",
+   "metadata": {},
+   "source": [
+    "Again, it is no mistery that a decision tree can make a perfect fit of this dataset while only looking at the unmeaningfull feature: *name*. Have a look:"
    ]
   },
   {
@@ -1218,6 +1256,16 @@
     "    filled=True,\n",
     "    feature_names=[\"name\", \"is_known_worldwide\"],\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76945fd1",
+   "metadata": {},
+   "source": [
+    "Note once more that this is a perfect fit since the gini impurity of all leaf nodes is 0. \n",
+    "\n",
+    "Again, you could be asking why is this feature not dropped in the EDA part of the project after realizing it works as an indexer. However, you would be getting the same answer as beforehand: this example is exagerated, but this phenomenon can happen even if this column just works as an indexer for a part of the dataset while the rest has meaningfull information. Additionally, most of the arguments given for the same question in scenario 1 still apply for this scenario."
    ]
   },
   {
